fix spacing and z-index

--- a/src/components/CareerCard/index.module.scss
+++ b/src/components/CareerCard/index.module.scss
@@ -22,7 +22,7 @@
 .title {
   margin: 0;
 
-  &:last-of-type {
+  &.withSpacing {
     margin-top: 24px;
   }
 }
