--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -13,7 +13,7 @@
   width: 100%;
   height: 64px;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 4;
 }
 
 .title {
@@ -48,7 +48,7 @@
   text-align: center;
   background-color: vars.$lightGray;
   box-shadow: rgba(100, 100, 111, 0.7) 0px 7px 29px 0px;
-  z-index: 1;
+  z-index: 3;
 }
 
 .menuOpen {
@@ -78,6 +78,7 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
+  z-index: 2;
 }
 
 @keyframes scaleDown {
